[package]
name = "retina"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "retina_tls"
path = "tls.rs"

[[bin]]
name = "retina_conn"
path = "conn.rs"

[[bin]]
name = "retina_http"
path = "http.rs"

[[bin]]
name = "retina_dns"
path = "dns.rs"

[dependencies]
anyhow = "1.0.40"
clap = { version = "3.1.8", features = ["derive"] }
env_logger = "0.8.3"
jsonl = "4.0.1"
lazy_static = "1.4.0"
log = { version = "0.4", features = ["release_max_level_info"] }
regex = "1.5.4"
core = { path = "../core", default-features = false, features = ["mlx5","retina"]}
filtergen = { path = "../filtergen", default-features = false, features = ["retina"] }
serde_json = "1.0.59"